# ALTTPR_WebMulti

./: .gitignore  README.md  docker-compose.yml  docker-compose_debug.yml
client/: .env  Dockerfile  README.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/app/: hooks.ts  store.ts  types.ts
client/src/components/: profile-sidebar.tsx
client/src/components/dashboard/: Dashboard.tsx  MultiworldSessions.tsx
client/src/components/ui/: input.tsx  scroll-area.tsx  sidebar.tsx  spinner.tsx
client/src/features/: Error.tsx  Header.tsx  MainLayout.tsx  loggerMiddleware.ts  loggerSlice.ts
client/src/features/api/: apiSlice.ts
data/: items.json
server/: .env  Dockerfile  README.md  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0925bf19d341_flags_and_player_restrictions.py  0b55c84c67f1_remove_unnecessary_indexes.py  43ba758cce62_add_frame_time_to_item_events.py  4eede98fc5a4_allow_multiple_players_to_be_assigned_.py  86fb260a1ee4_initial_migration.py  9ac04c2a0a32_non_player_chat_support.py  9ef792bc3a9c_bot_and_username_changing_support.py  fdb25dd1c281_fix_user_session_links.py
server/server/: crud.py  database.py  dependencies.py  logging.py  main.py  models.py  schemas.py  sram.py  utils.py
server/server/data/: WebMutliDataScraper.py  data.py  items.json  locs.py  webmulti_item_table.json  webmulti_location_info.json  webmulti_lookup_id_to_name.json
server/server/ws/: ws.py
(+28 files in other folders)
