[tool.poetry]
name = "server"
version = "0.1.0"
description = "A web based server for ALTTPR Multiworlds"
authors = ["KrisDavie <kristofer.davie@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.109.2"}
uvicorn = {extras = ["standard"], version = "^0.27.1"}
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
websockets = "^12.0"
pydantic = "^2.6.1"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
mypy = "^1.8.0"
pytest = "^8.0.0"
debugpy = "^1.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.main:app"